--- a/session_2_task.ipynb
+++ b/session_2_task.ipynb
@@ -2,6 +2,9 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
@@ -10,6 +13,7 @@
       "name": "python"
     }
   },
+  "cells": [
     {
       "cell_type": "markdown",
       "source": [
